- implement endpoints that prepare prediction input - discard jinja approach and files (static, templates, routes)
add new routes
